@@ -2,6 +2,8 @@
 # shortcuts.py <Peter.Bienstman@UGent.be>
 #
 
+from PyQt5 import QtCore
+
 from mnemosyne.libmnemosyne.plugin import Plugin
 from mnemosyne.pyqt_ui.review_wdgt import ReviewWdgt
 
@@ -10,32 +12,30 @@ class MyReviewWdgt(ReviewWdgt):
 
     def __init__(self, **kwds):
         super().__init__(**kwds)
-    
-        self.auto_focus_grades = False
-
-        # Change shortcuts for the grade buttons.
-        self.grade_0_button.setShortcut("q")
-        self.grade_1_button.setShortcut("w")
-        self.grade_2_button.setShortcut("e")
-        self.grade_3_button.setShortcut("r")
-        self.grade_4_button.setShortcut("t")
-        self.grade_5_button.setShortcut("y")
-
-        # Some more examples.
-        
-        #self.grade_0_button.setShortcut("Enter") # Numerical keypad
-        #self.grade_1_button.setShortcut("Space")
-        #self.grade_2_button.setShortcut("Return") 
+        # Map Q to grade 0
+        self.key_to_grade_map[QtCore.Qt.Key_Q] = 0
 
 
 class ShortcutsPlugin(Plugin):
 
     name = "Custom shortcuts"
     description = "Customise review widget shortcuts."
-    components = [MyReviewWdgt]
     supported_API_level = 2
+
+    def activate(self, **kwds):
+        super().activate(**kwds)
+        # These add our widget to the end of the list, which is the correct
+        # position, as it should be initialised last.
+        self.component_manager.add_gui_to_component(\
+            "ScheduledForgottenNew", MyReviewWdgt)
+        self.component_manager.add_gui_to_component(\
+            "NewOnly", MyReviewWdgt)
+        self.component_manager.add_gui_to_component(\
+            "CramAll", MyReviewWdgt)
+        self.component_manager.add_gui_to_component(\
+            "CramRecent", MyReviewWdgt)
 
 # Register plugin.
 
 from mnemosyne.libmnemosyne.plugin import register_user_plugin
-register_user_plugin(ShortcutsPlugin)
+plugin = register_user_plugin(ShortcutsPlugin)
